--- a/helm/Templates/service.yaml
+++ b/helm/Templates/service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-python-app-service
+  name: my-python-app-service  # Name of the service
 spec:
   selector:
-    app: my-python-app
+    app: my-python-app  # Make sure this matches the label in your deployment
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30001  # Replace with your desired NodePort
-  type: NodePort  # Expose via NodePort instead of LoadBalancer
+      port: 80  # External port (service port that users connect to)
+      targetPort: 80  # Port inside the container (application port)
+      nodePort: 30976  # NodePort you want to expose
+  type: NodePort  # Expose service using NodePort
+
