--- a/helm/Templates/hpa.yaml
+++ b/helm/Templates/hpa.yaml
@@ -6,13 +6,14 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: python-app
-  minReplicas: 2
-  maxReplicas: 10
+    name: python-app  # Name of your deployment
+  minReplicas: 2  # Minimum number of replicas
+  maxReplicas: 10  # Maximum number of replicas
   metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 50
+    - type: Resource
+      resource:
+        name: cpu  # Scaling based on CPU utilization
+        target:
+          type: Utilization
+          averageUtilization: 50  # Target 50% CPU utilization
+
