--- a/helm/Templates/admin-user.yaml
+++ b/helm/Templates/admin-user.yaml
@@ -1,19 +1,18 @@
-# k8s/admin-user.yaml
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: admin-user
-  namespace: kube-system
+  name: admin-user  # Name of the ServiceAccount
+  namespace: kube-system  # Namespace where the ServiceAccount is created
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: admin-user
+  name: admin-user  # Name of the ClusterRoleBinding
 subjects:
 - kind: ServiceAccount
-  name: admin-user
-  namespace: kube-system
+  name: admin-user  # The ServiceAccount you created
+  namespace: kube-system  # The namespace of the ServiceAccount
 roleRef:
   kind: ClusterRole
-  name: cluster-admin
+  name: cluster-admin  # Binding to the cluster-admin role
   apiGroup: rbac.authorization.k8s.io
